--- a/Appendices/Background_treatmenteffects.tex
+++ b/Appendices/Background_treatmenteffects.tex
@@ -43,7 +43,7 @@
 \bottomrule
 \end{tabular}
 \justify
-Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more determined eligibility \citep{Ramey_Smith_1977_AJMD, Ramey_Campbell_1984_AJMD,Ramey_Campbell_1991_childreninpoverty,Ramey_Campbell_etal_2000_ADS}. The weighting scale aimed to establish the relative importance of each item in the index \citep{Ramey_Smith_1977_AJMD}. Race was not  considered for eligibility; however, 98\% of the families who agreed to participate were African-American\citep{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR}.
+Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more determined eligibility \citep{Ramey_Smith_1977_AJMD, Ramey_Campbell_1984_AJMD,Ramey_Campbell_1991_childreninpoverty,Ramey_Campbell_etal_2000_ADS}. The weighting scale aimed to establish the relative importance of each item in the index \citep{Ramey_Smith_1977_AJMD}. Race was not  considered for eligibility; however, 98\% of the families who agreed to participate were African American \citep{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR}.
 \end{table}
 
 \noindent The HRI for CARE was similar to that of ABC---it also contained 13 weighted variables and a score of 11 or above was required to be considered eligible. The items for maternal and paternal education levels have the same categories and weights as the ABC HRI. The other identical items are having an absent father,  school-age siblings performing lower than the norm based on grade-level or achievement tests, a record of father's unstable job history or unskilled labor, social agencies indicating a high level of need, and other circumstances related to cultural or social disadvantage. The specification of the following items were changed between the ABC and CARE HRI. The weight associated with household income depended on the number of individuals in the family for CARE and the income categories range from less than \$11,327.08 to \$76,457.80 (2014 USD) or more. In the CARE HRI, it is asked if payments were received from welfare agencies in the past 5 years instead of the past 3 years. Similarly, it asks if any family member has sought counseling in the past 5 years instead of the past 3 years. The threshold for maternal or paternal IQ is 85 in the CARE HRI instead of 90 as in the ABC HRI.  It does not have an item related to the absence of maternal relatives in the area, but replaces that item with asking if any member of the mother or father's immediate family has received services for the mentally disabled (the weight for this item is 3).\footnote{\citet{Ramey_etal_1985_Project-CARE_TiECSE}.} \\
