--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -68,12 +68,12 @@ Human Development            & \\
 University of Chicago                                        &  \\
 1126 East 59th Street                       & \\
 Chicago, IL 60637                                              &       \\
-Phone: 773-834-0029                                    &  \\
+Phone: 734-277-7379                                    &  \\
 Email: aziff@uchicago.edu                     &  \\
 
 \end{tabular}
 
-\textbf{[JJH: (1) Please align the appendices and text (make sure references are correct); (2) App C \& E seem to cover same stuff. Please be careful; (3) Internal vs external locus of control.]}
+\textbf{[JJH: (1) Please align the appendices and text (make sure references are correct); (2) App C \& E seem to cover same stuff. Please be careful; (3) Internal vs external locus of control.][(1) We rearranged the appendices to be more logical and double checked the references. Please note some of the lettering of the appendices changed. Everything is consistent and correctly referenced throughout. (2) We fixed any overlap. (3) We clarify the locus of control below to address this confusion.]}
 
 \clearpage
 
