--- a/output/abccare-gendergaps-summarizingtable.tex
+++ b/output/abccare-gendergaps-summarizingtable.tex
@@ -2,11 +2,11 @@
 \toprule
 & (1) & (2) & (3) & (4) \\
 Category & Control Group  &  Control Group &  Control Group &  Treatment \\
-	&				&	Stay at Home		& in Low Quality Childcare &  Group \\
+	&				&	Stay at Home		& in Low-Quality Childcare &  Group \\
 \midrule
 IQ 								& \checkmark 	&  \checkmark* 		& $\times$	& \checkmark \\
 Achievement						& \checkmark* 	&  \checkmark* 		&$\times$		& $\times$* \\
-Social-emotional					& $\times$	& \checkmark 		&$\times$* 	&$\times$* \\
+Social-Emotional					& $\times$	& \checkmark 		&$\times$* 	&$\times$* \\
 Parenting							& \checkmark	&  \checkmark* 		&$\times$ 	& $\times$ \\
 Parental income					&  \checkmark  &\checkmark* 		& $\times$  	& \checkmark \\
 Education							& \checkmark 	&\checkmark* 		& $\times$ 	&	$\times$* \\
