--- a/output/abccare-proportion-summary-alt.tex
+++ b/output/abccare-proportion-summary-alt.tex
@@ -6,7 +6,7 @@ Category & \# Outcomes & \mc{2}{c}{Proportion} & Difference \\
 \midrule
 IQ & 15 & 0.267 & 0.533 & \textbf{0.267} \\
 Achievement & 12 & 0.250 & \textbf{0.000} & \textbf{-0.250} \\
-Social-emotional & 22 & \textbf{0.318} & \textbf{0.364} & \textbf{0.045} \\
+Social-Emotional & 22 & \textbf{0.318} & \textbf{0.364} & \textbf{0.045} \\
 Parenting & 7 & 0.429 & 0.286 & -0.143 \\
 Parental Income & 15 & 0.467 & 0.733 & \textbf{0.267} \\
 Education & 9 & 0.444 & \textbf{0.111} & \textbf{-0.333} \\
