--- a/output/abccare-proportion-summary-full.tex
+++ b/output/abccare-proportion-summary-full.tex
@@ -6,7 +6,7 @@ Category & \# Outcomes & \mc{2}{c}{Proportion} & Difference \\
 \midrule
 IQ & 15 & 0.733 & 0.533 & -0.200 \\
 Achievement & 12 & \textbf{0.833} & \textbf{0.000} & \textbf{-0.833} \\
-Social-emotional & 22 & 0.455 & 0.364 & \textbf{-0.091} \\
+Social-Emotional & 22 & 0.455 & 0.364 & \textbf{-0.091} \\
 Parenting & 7 & 0.571 & 0.286 & \textbf{-0.286} \\
 Parental Income & 15 & 0.600 & 0.733 & 0.133 \\
 Education & 9 & 0.667 & \textbf{0.111} & \textbf{-0.556} \\
